# langgraph_orchestrator

./: .env.example  CHANGELOG.md  README.md  pyproject.toml
.tmp_smoke_target/: CHANGELOG.md  README.md
.tmp_smoke_target/docs/obsidian/: notes.md
docs/obsidian/: orchestrator-overview.md
src/langgraph_orchestrator/adapters/: filesystem.py  git.py  llm.py
src/langgraph_orchestrator/agents/: architect.py  developer.py  documenter.py
src/langgraph_orchestrator/application/: ports.py  services.py  workspace.py
src/langgraph_orchestrator/cli/: main.py
src/langgraph_orchestrator/config/: runtime.py
src/langgraph_orchestrator/domain/: models.py  policies.py
src/langgraph_orchestrator/graph/: workflow.py
tests/: test_documenter.py  test_inspector.py  test_policies.py  test_runtime.py  test_workflow.py
